# compiler

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.txt  clippy.toml  index.d.ts  index.js  package.json
.github/actions/rust/: action.yml
.github/workflows/: push.yml
surplus/: Cargo.toml
surplus-cli/: Cargo.toml
surplus-cli/src/: main.rs  wrapper.rs
surplus-test/: Cargo.toml  README.md  build.rs  harness-api.mjs  harness.mjs  package.json
surplus-test/src/: lib.rs  main.rs  tests.rs
surplus-test/src/tests/: div.compiled.js  div.jsx  empty.compiled.js  event_handler.jsx  no_jsx.compiled.js  no_jsx.jsx  svg.compiled.js  svg.jsx
surplus-test/tests/: array_children.jsx  array_children.mount.js  boolean_attrs.jsx  boolean_attrs.mount.js  component_children.jsx  component_children.mount.js  conditional_and.jsx  conditional_and.mount.js  conditional_ternary.jsx  conditional_ternary.mount.js  disabled_attr.jsx  disabled_attr.mount.js  div.jsx  div.mount.js  event_handlers_basic.jsx  event_handlers_basic.mount.js  event_handlers_bubbling.jsx  event_handlers_bubbling.mount.js  event_handlers_conditional.jsx  event_handlers_conditional.mount.js  event_handlers_dynamic.jsx  event_handlers_dynamic.mount.js  event_handlers_multiple.jsx  event_handlers_multiple.mount.js  event_handlers_params.jsx  event_handlers_params.mount.js  event_handlers_svg.jsx  event_handlers_svg.mount.js  fragment.mount.js  mixed_content.jsx  mixed_content.mount.js  nested.jsx  nested.mount.js  obj_spread.jsx  obj_spread.mount.js  reactive_attrs.jsx  reactive_attrs.mount.js  reactive_content.jsx  reactive_content.mount.js  self_closing.jsx  (+7 more)
surplus-wasm/: Cargo.toml
surplus-wasm/src/: lib.rs
surplus/src/: constants.rs  element.rs  lib.rs  tag_ns.rs  traverser.rs
surplus/src/traverser/: enter_jsx_element.rs  exit_jsx_attribute.rs  exit_jsx_child.rs  exit_jsx_element.rs  exit_jsx_spread_attribute.rs  mod.rs  oxc_impl.rs
