[package]
name = "surplus-cli"
description = "CLI for the Surplus JSX compiler"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "surplus"
path = "src/main.rs"

[dependencies]
surplus = { path = "../surplus", version = "0.0.0" }
clap.workspace = true
oxc.workspace = true

[lints]
workspace = true
