[package]
name = "surplus-cli"
description = "CLI for the Surplus JSX compiler"
version = "0.0.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.88.0"

[lib]
path = "src/wrapper.rs"

[[bin]]
name = "surplus"
path = "src/main.rs"
required-features = ["clap"]

[features]
default = ["clap"]
clap = ["dep:clap"]

[dependencies]
surplus = { path = "../surplus", version = "0.0.3" }
clap = { workspace = true, optional = true }
oxc.workspace = true

[lints]
workspace = true
