[package]
name = "surplus-test"
description = "Test suite for the Surplus JSX compiler"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.88.0"
publish = false

[dependencies]
surplus-cli = { path = "../surplus-cli" }
clap.workspace = true
syn.workspace = true
oxc.workspace = true
proc-macro2.workspace = true
quote.workspace = true
prettyplease.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
