[package]
name = "surplus-wasm"
description = "Internal WASM wrapper crate for `surplus`"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
surplus-cli = { path = "../surplus-cli", version = "0.0.1", default-features = false }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
