[package]
name = "surplus"
description = "Core library for the Surplus JSX compiler"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.88.0"

[dependencies]
htmlentity = "1.3.2"
oxc.workspace = true
oxc_traverse.workspace = true

[lints]
workspace = true
